--- a/AlertDialogs/app/src/main/res/layout/activity_main.xml
+++ b/AlertDialogs/app/src/main/res/layout/activity_main.xml
@@ -95,4 +95,12 @@
         android:layout_below="@+id/btnAlertDialog"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+    <Button
+        android:id="@+id/btnCustomDialogFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_dialog_fragment"
+        android:layout_below="@+id/btnCustomAlertDialog"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
