--- a/AlertDialogs/app/src/main/res/layout/custom_alert.xml
+++ b/AlertDialogs/app/src/main/res/layout/custom_alert.xml
@@ -8,17 +8,18 @@
     <CalendarView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteY="0dp"
         android:id="@+id/calendarView"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp" />
+        android:layout_marginLeft="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/editText"
+        android:layout_marginBottom="8dp" />
 
     <Button
-        android:text="自定义button"
+        android:text="弹出子对话框"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btnCustom"
@@ -29,7 +30,51 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/calendarView"
+        app:layout_constraintTop_toBottomOf="@+id/editText"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        app:layout_constraintVertical_bias="0.52"
+        app:layout_constraintHorizontal_bias="0.46" />
+
+    <Button
+        android:text="二次弹出"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnSecondPop"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        app:layout_constraintVertical_bias="0.52"
+        app:layout_constraintHorizontal_bias="0.52"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/btnCustom"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/btnCustom"
+        app:layout_constraintTop_toTopOf="@+id/btnCustom" />
+
+    <EditText
+        android:layout_width="350dp"
+        android:inputType="text|textPersonName"
+        android:text="txtCustom"
+        android:ems="10"
+        tools:layout_editor_absoluteY="364dp"
+        android:id="@+id/editText"
+        app:layout_constraintRight_toRightOf="@+id/calendarView"
+        app:layout_constraintLeft_toLeftOf="@+id/calendarView"
+        tools:text="初使内容"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_height="48dp" />
+
+    <Button
+        android:text="关闭"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnCancel"
+        app:layout_constraintRight_toLeftOf="@+id/btnCustom"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintTop_toTopOf="@+id/btnCustom" />
 </android.support.constraint.ConstraintLayout>
