--- a/edit/app/src/main/res/layout/activity_main.xml
+++ b/edit/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:textColorHint="#999999"
         android:layout_gravity="center"
         android:textSize="15sp"
-       />
+        android:maxLines="1"/>
 
     <EditText
         android:id="@+id/editTextFocusUnable"
