add a proguard test module

--- a/envdetect/src/main/res/layout/activity_main.xml
+++ b/envdetect/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="0dp"
         android:scrollHorizontally="true"
+        android:scrollbars="vertical"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -28,7 +29,7 @@
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1"
         android:background="@color/colorPrimary"
-        android:textColor="#ffffff"/>
+        android:textColor="@color/colorAccent"/>
 
     <Button
         android:id="@+id/button_detect_path"
@@ -53,12 +54,12 @@
         android:layout_marginStart="122dp"/>
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/button_detect_system"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="检测系统"
         app:layout_constraintLeft_toRightOf="@+id/button_detect_net"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="6dp"
         tools:layout_constraintTop_creator="1"
         android:layout_marginStart="8dp"
         android:layout_marginTop="6dp"
